--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body::before {
 }
 
 .inner {
-    max-width: 1040px;
+    max-width: calc(1040px + 60px);
     margin-inline: auto;
     padding-inline: 30px; /* PCでも左右に少し余白 */
 }
@@ -54,10 +54,10 @@ body::before {
 
 /* タブレットサイズ以下 */
 @media (max-width: 900px) {
-  .inner {
-    max-width: 95vw;
-    padding-inline: 20px;
-  }
+    .inner {
+        max-width: calc(95vw + 40px);
+        padding-inline: 20px;
+    }
 }
 
 /* スマホサイズ */
@@ -75,6 +75,19 @@ body::before {
     line-height: 120%;
     text-align: center;
     margin-bottom: 60px;
+}
+
+@media screen and (max-width: 1024px) {
+    .section__title {
+        font-size: 32px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .section__title {
+        font-size: 24px;
+        margin-bottom: 30px;
+    }
 }
 
 .button-free {
@@ -177,12 +190,6 @@ body::before {
     color: #02C755
 }
 
-@media screen and (max-width: 1024px) {
-    .section__title {
-        font-size: 32px;
-    }
-}
-
 /* ヘッダー */
 .header {
     display: flex;
@@ -256,8 +263,152 @@ body::before {
     height: 21px;
     font-size: 8px;
 }
-/* ファーストビュー */
 
+/* ハンバーガーメニュー */
+.header__hamburger-container {
+    display: none;
+}
+
+.header__hamburger {
+    position: relative;
+    width: 30px;
+    height: 24px;
+    cursor: pointer;
+    z-index: 100;
+}
+
+.header__hamburger-button {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+.header__hamburger-line {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #333;
+    transition: all 0.3s;
+}
+
+.header__hamburger-line:nth-child(1) {
+    top: 0;
+}
+
+.header__hamburger-line:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.header__hamburger-line:nth-child(3) {
+    bottom: 0;
+}
+
+/* ハンバーガーメニューがアクティブ時のスタイル */
+.header__hamburger.active .header__hamburger-line:nth-child(1) {
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+}
+
+.header__hamburger.active .header__hamburger-line:nth-child(2) {
+    opacity: 0;
+}
+
+.header__hamburger.active .header__hamburger-line:nth-child(3) {
+    bottom: 50%;
+    transform: translateY(50%) rotate(-45deg);
+}
+
+/* ナビゲーション */
+.header__nav {
+    display: none;
+}
+
+@media screen and (max-width: 1024px) {
+    .header {
+        padding-inline: 20px;
+    }
+
+    .header__logo {
+        height: 50px;
+    }
+
+    .header__contact {
+        gap: 20px;
+    }
+
+    .header__button-free {
+        width: 270px;
+    }
+
+    .header__button-container-free {
+        padding-inline: 15px;
+    }
+
+    .header__button-line {
+        width: 230px;
+    }
+
+    .header__button-container-line {
+        padding-inline: 25px;
+    }
+}
+
+@media (max-width: 768px) {
+    .header__contact {
+        display: none;
+    }
+
+    /* ハンバーガーメニュー */
+    .header__hamburger-container {
+        display: block;
+    }
+
+    /* ナビゲーション */
+    .header__nav {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff;
+        padding: 80px 20px;
+        transition: all 0.3s;
+        z-index: 99;
+        display: block;
+    }
+
+    .header__nav.active {
+        right: 0;
+    }
+
+    .header__nav-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .header__nav-item {
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .header__nav-link {
+        font-size: 20px;
+        font-weight: 700;
+        color: #333;
+        text-decoration: none;
+        display: block;
+        padding: 10px;
+    }
+}
+
+/* ファーストビュー */
 .fv {
     position: relative;
     padding: 73px 90px 45px;
@@ -318,6 +469,12 @@ body::before {
     font-weight: 700;
 }
 
+.fv__content-item-text {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 150%;
+}
+
 .fv__content-item-orange {
     color: #FF9000;
     font-size: 18px;
@@ -354,16 +511,100 @@ body::before {
     -webkit-mask-image: linear-gradient(to bottom, white 0%, transparent 25%, black 35%, black 100%);
 }
 
+@media screen and (max-width: 1024px) {
+    .fv {
+        padding-inline: 20px;
+    }
+
+    .fv__container {
+        width: 62%;
+    }
+
+    .fv__subtitle {
+        font-size: 16px;
+        width: fit-content;
+        margin-inline: auto;
+    }
+
+    .fv__title {
+        font-size: 64px;
+        width: fit-content;
+        margin-inline: auto;
+    }
+
+    .fv__title-quote {
+        font-size: 80px;
+    }
+
+    .fv__title-big {
+        font-size: 80px;
+    }
+    
+    .fv__content-item {
+        width: 120px;
+        height: 120px;
+    }
+
+    .fv__content-item-text {
+        font-size: 14px;
+    }
+
+    .fv__content-item-orange {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .fv__container {
+        width: 100%;
+    }
+
+    .fv__subtitle {
+        font-size: 14px;
+    }
+
+    .fv__title {
+        font-size: 40px;
+    }
+
+    .fv__title-quote {
+        font-size: 64px;
+    }
+
+    .fv__title-big {
+        font-size: 64px;
+    }
+
+    .fv__content {
+        flex-direction: column;
+        width: 95%;
+        gap: 10px;
+        margin-inline: auto;
+        margin-top: 20px;
+    }
+
+    .fv__content-item {
+        background-color: initial;
+        border-radius: 0;
+        width: 100%;
+        padding: 0;
+        height: initial;
+        aspect-ratio: initial;
+        text-align: left;
+    }
+}
+
 /* お悩み */
 
 .problem {
+    padding: 64px 0 48px;
+}
+
+.problem__inner {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 20px;
-    margin-inline: auto;
-    max-width: 1040px;
-    padding: 64px 115px 48px;
 }
 
 .problem__title {
@@ -407,6 +648,32 @@ body::before {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -55%);
+}
+
+@media screen and (max-width: 1024px) {
+    .problem__title-big {
+        font-size: 40px;
+    }
+
+    .problem__inner {
+        position: relative;
+    }
+
+    .problem__image {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 10px;
+        max-width: 120px;
+        object-fit: cover;
+        
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .problem__title-big {
+        font-size: 30px;
+    }
 }
 
 /* 解決策 */
@@ -493,13 +760,19 @@ body::before {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     padding: 30px 20px 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .solution__container-item-title h3 {
+    display: block;
     font-size: 24px;
     line-height: 150%;
     font-weight: 700;
     text-align: center;
+    height: fit-content;
+    margin-block: auto;
 }
 
 .solution__container-item-content {
@@ -521,6 +794,14 @@ body::before {
 }
 
 @media (max-width: 1024px) {
+    .solution__title-point {
+        font-size: 32px;
+    }
+
+    .solution__title-big {
+        font-size: 48px;
+    }
+
     .solution__container-items {
         flex-direction: column;
         margin-inline: auto;
@@ -534,8 +815,64 @@ body::before {
     }
 }
 
-/* CV */
+@media (max-width: 768px) {
+    .solution {
+        margin-top: 0;
+    }
 
+    .solution__arrow {
+        height: 40px;
+        width: fit-content;
+        margin-inline: auto;
+        position: relative;
+        margin-bottom: 24px;
+    }
+    
+    .solution__arrow-item {
+        position: absolute;
+        margin-bottom: 5px;
+        width: 24px;
+        height: 24px;
+        border-right: 4px solid #F7E40B;
+        border-bottom: 4px solid #F7E40B;
+        transform: rotate(45deg);
+    }
+    
+    .solution__arrow-item:nth-child(1) {
+        top: 0px;
+    }
+    
+    .solution__arrow-item:nth-child(2) {
+        top: 16px;
+    }
+    
+    .solution__arrow-item:nth-child(3) {
+        top: 32px;
+    }
+
+    .solution__title-point {
+        font-size: 24px;
+    }
+
+    .solution__title-big {
+        font-size: 36px;
+    }
+
+    .solution__container-items {
+        flex-direction: column;
+    }
+
+    .solution__container-item-title h3 {
+        font-size: 20px;
+    }    
+
+    .solution__container-item-text {
+        font-size: 14px;
+    }
+}
+
+
+/* CV */
 .cv {
     background:linear-gradient(to right, 
             rgba(100, 99, 78, 0) 0%,
@@ -580,11 +917,12 @@ body::before {
     text-align: center;
     background: url(images/background-yellow.png) no-repeat 30% 30%;
     background-size: 400px 400px;
+    margin-bottom: 0;
 }
 
 .cv__container {
     background-color: #fff;
-    max-width: 1040px;
+    max-width: calc(1040px + 60px);
     min-height: 200px;
     margin-inline: auto;
     border-radius: 20px;
@@ -669,8 +1007,82 @@ body::before {
 }
 
 @media (max-width: 1024px) {
+    .cv__title {
+        padding-top: 60px;
+    }
+
+    .cv__image {
+        mask-image: linear-gradient(to right, black 20%, transparent 100%);
+        -webkit-mask-image: linear-gradient(to right, black 20%, transparent 100%);
+    }
+
+    .cv__container {
+        padding-inline: 40px;
+    }
+
     .cv::before {
         font-size: 120px;
+    }
+
+    .cv__button-free-container {
+        padding-inline: min(40px, 4%) min(47px, 3%);
+    }
+
+    .cv__button-free-circle {
+        width: 50px;
+        height: 50px;
+        font-size: 10px;
+        padding-top: 10px;
+    }
+    
+    .cv__button-free-circle-big {
+        font-size: 14px;
+    }
+
+    .cv__button-free-text {
+        font-size: 18px;
+    }
+
+    .cv__button-free-red {
+        font-size: 18px;
+    }
+    
+    .cv__button-line-container {
+        padding-inline: min(75px, 8%) min(64px, 7%);
+    }
+
+    .cv__button-line-text {
+        font-size: 18px;
+    }
+
+    .cv__button-arrow {
+        width: 25px;
+        height: 25px;
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .cv__container {
+        padding-inline: 20px;
+    }
+
+    .cv__buttons {
+        flex-direction: column;
+    }
+
+    .cv__button {
+        max-width: 80%;
+        width: 100%;
+        min-width: 300px;
+    }
+
+    .cv__button-free-container, .cv__button-line-container {
+        padding-inline: initial;
+    }
+
+    .cv__button-container {
+        padding-inline: 20px;
     }
 }
 
@@ -769,6 +1181,10 @@ body::before {
 }
 
 @media (max-width: 1024px) {
+    .feature__container {
+        padding-inline: 40px;
+    }
+
     .feature__container-box {
         gap: 40px;
     }
@@ -779,6 +1195,60 @@ body::before {
 
     .feature__container-image {
         width: calc((100% - 40px) / 2 - 30px);
+    }
+}
+
+@media (max-width: 768px) {
+    .feature__container {
+        padding-inline: 20px;
+    }
+
+    .feature__container-box {
+        flex: 1;
+        position: relative;
+    }
+
+    .feature__container-box:nth-child(2n) {
+        flex-direction: row;
+    }
+
+    .feature__container-item {
+        width: 100%;
+    }
+
+    .feature__container-title {
+        /* width: 50%; */
+        width: 100%;
+        margin-right: auto;
+        gap: 10px;
+    }
+
+    .feature__container-title-tag {
+        font-size: 14px;
+    }
+
+    .feature__container-title-text {
+        font-size: 20px;
+        height: fit-content;
+    } 
+
+    .feature__container-title-text-number {
+        font-size: 32px;
+    }
+
+    .feature__container-text-text {
+        font-size: 14px;
+    }
+
+    .feature__container-image {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 300px;
+        max-width: 45%;
+        min-width: initial;
+        object-fit: cover;
+        display: none;
     }
 }
 
@@ -797,7 +1267,6 @@ body::before {
     border-radius: 50px;
     height: 80px;
     width: 100%;
-    padding: 0 20px;
     margin-bottom: 40px;
 }
 
@@ -917,6 +1386,32 @@ body::before {
     .achievement__list-item {
         font-size: 20px;
     }
+
+    .achievement__container-customer {
+        padding-inline: 50px;
+    }
+
+    .achievement__container-customer-name {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .achievement__list {
+        height: 40px;
+    }
+    
+    .achievement__list-item {
+        font-size: 14px;
+    }
+
+    .achievement__container-customer {
+        padding-inline: 30px;
+    }
+
+    .achievement__container-customer-name {
+        font-size: 20px;
+    }
 }
 
 /* フロー */
@@ -926,12 +1421,13 @@ body::before {
 }
 
 .flow__inner {
-    max-width: 950px;
+    max-width: calc(950px + 60px);
 }
 
 .flow__item {
     display: flex;
-    align-items: space-between;
+    justify-content: space-between;
+    align-items: flex-start;
     gap: 30px;
 }
 
@@ -939,7 +1435,7 @@ body::before {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 11px;
+    margin-top: 6px;
 }
 
 .flow__item-step-number {
@@ -997,6 +1493,81 @@ body::before {
     margin-left: auto;
 }
 
+@media (max-width: 1024px) {
+    .flow__image {
+        width: 280px;
+    }
+}
+
+@media (max-width: 768px) {
+    /* .flow__item {
+        align-items: flex-start;
+    }
+
+    .flow__item-content {
+        margin-bottom: 20px;
+    }
+
+    .flow__item-step-icon {
+        height: 100%;
+    }
+
+    .flow__item:not(:last-child) .flow__item-step-icon::after {
+        min-height: 30px;
+        max-height: 50px;
+    }
+
+    .flow__item-step-icon-self {
+        width: 80px;
+        height: 80px;
+    }
+
+    .flow__item-step-icon-self i {
+        font-size: 32px;
+    } */
+
+    .flow__inner {
+        max-width: calc(95vw + 40px);
+        margin-inline: 20px;
+    }
+
+    .flow__item {
+        flex-direction: column;
+        gap: 5px;
+        margin-bottom: 30px;
+    }
+
+    .flow__item-content-title {
+        font-size: 20px;
+    }
+
+    .flow__item-content-text {
+        font-size: 14px;
+    }
+
+    .flow__item-step {
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .flow__item-step-icon {
+        display: none;
+    }
+
+    .flow__item-step-icon-self {
+        width: 40px;
+        height: 40px;
+    }
+
+    .flow__item:not(:last-child) .flow__item-step-icon::after {
+        display: none;
+    }
+
+    .flow__image {
+        width: 200px;
+    }
+}
+
 /* よくある質問 */
 
 .faq {
@@ -1051,7 +1622,7 @@ body::before {
     color: #fff;
 }
 
-.faq__container-item-question-title {
+.faq__container-item-question-text {
     font-size: 14px;
     line-height: 150%;
     font-weight: 700;
@@ -1084,6 +1655,11 @@ body::before {
     color: #333333;
 }
 
+.faq__container-item-answer-text {
+    font-size: 14px;
+    line-height: 180%;
+}
+
 @media (max-width: 1024px) {
     .faq__inner {
         gap: 0;
@@ -1100,8 +1676,27 @@ body::before {
 
     .faq__container-item {
         padding-inline: 20px;
+    }   
+}
+
+@media (max-width: 768px) {
+    .faq__inner {
+        flex-direction: column;
     }
-    
+
+    .faq__container {
+        margin-top: 15px;
+    }
+
+    .faq__container-item {
+        padding-inline: 0;
+    }
+
+    .faq__container-item-tag {
+        min-width: 28px;
+        min-height: 28px;
+        line-height: 14px;
+    }
 }
 
 /* お問い合わせ */
@@ -1111,7 +1706,7 @@ body::before {
 }
 
 .contact__inner {
-    max-width: 1280px;
+    max-width: calc(1280px + 60px);
     margin-inline: auto;
 }
 
@@ -1294,7 +1889,7 @@ body::before {
 .contact__form-checkbox-label .contact__form-supplement-text {
     display: inline; /* チェックボックスラベル内の補足テキストはインラインに */
     margin-left: 8px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .contact__form-supplement-text {
@@ -1414,6 +2009,51 @@ body::before {
 
     .contact__form {
         margin-inline: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact__title::before {
+        font-size: 64px;
+    }
+
+    .contact__container {
+        padding-block: 40px 20px;
+        border-radius: 20px;
+    }
+
+    .contact__form-group {
+        margin-bottom: 20px;
+    }
+
+    .contact__form-label {
+        font-size: 16px;
+    }
+
+    .contact__form-input {
+        padding: 10px 15px;
+        font-size: 14px;
+    }
+
+    .contact__form-multiple-text {
+        font-size: 12px;
+    }
+
+    .contact__form-checkbox-input {
+        width: 30px;
+        height: 30px;
+    }
+
+    .contact__form-checkbox-label {
+        font-size: 14px;
+    }
+    
+    .contact__form-checkbox-label .contact__form-supplement-text {
+        font-size: 12px;
+    }
+    
+    .contact__form-group--privacy {
+        margin-top: 40px;
     }
 }
 
