--- a/index.css
+++ b/index.css
@@ -227,7 +227,7 @@ body::before {
 }
 
 .header__button-container-line {
-    padding-block: 16px;
+    padding-block: 15px;
     padding-inline: 48px 38px;
 }
 
@@ -411,12 +411,24 @@ body::before {
 /* ファーストビュー */
 .fv {
     position: relative;
-    padding: 73px 90px 45px;
+    padding: 73px 90px 45px;    
+}
+
+.fv__border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.43;
+    width: 2000px;
+    overflow: hidden;
+    z-index: -1;
+    transform: translateX(-20%) translateY(-10%);
 }
 
 .fv__container {
     width: 560px;
     margin-right: auto;
+    position: relative;
 }
 
 .fv__text {
@@ -427,7 +439,15 @@ body::before {
     font-size: 20px;
     font-weight: 700;
     line-height: 130%;
+    margin-bottom: 30px;
 }
+
+.fv__decoration {
+    position: absolute;
+    top: 32px;
+    right: 50%;
+    transform: translateX(50%);
+}   
 
 .fv__title {
     line-height: 115%;
@@ -451,6 +471,7 @@ body::before {
     align-items: center;
     gap: 20px;
     margin-inline: auto;
+    margin-top: 30px;
 }
 
 .fv__content-item {
@@ -467,6 +488,24 @@ body::before {
     line-height: 150%;
     font-size: 16px;
     font-weight: 700;
+    background-size: center center;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.fv__content-item-1 {
+    background-image: url(images/fv_icon01.png);
+    z-index: 2;
+}
+
+.fv__content-item-2 {
+    background-image: url(images/fv_icon02.png);
+    z-index: 2;
+}
+
+.fv__content-item-3 {
+    background-image: url(images/fv_icon03.png);
+    z-index: 2;
 }
 
 .fv__content-item-text {
@@ -526,6 +565,11 @@ body::before {
         margin-inline: auto;
     }
 
+    .fv__decoration {
+        top: 28px;
+        width: 400px;
+    }
+
     .fv__title {
         font-size: 64px;
         width: fit-content;
@@ -552,6 +596,10 @@ body::before {
     .fv__content-item-orange {
         font-size: 16px;
     }
+
+    .fv__content-item {
+        background-size: 80px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -561,6 +609,11 @@ body::before {
 
     .fv__subtitle {
         font-size: 14px;
+    }
+
+    .fv__decoration {
+        top: 28px;
+        width: 300px;
     }
 
     .fv__title {
@@ -592,6 +645,18 @@ body::before {
         aspect-ratio: initial;
         text-align: left;
     }
+
+    .fv__content-item-1 {
+        background-image: none;
+    }
+    
+    .fv__content-item-2 {
+        background-image: none;
+    }
+    
+    .fv__content-item-3 {
+        background-image: none;
+    }
 }
 
 /* お悩み */
@@ -605,6 +670,12 @@ body::before {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    /* background-image: url(images/mask.png); */
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    /* background-color: rgba(255, 255, 255, 0.6); */
+    background-blend-mode:lighten;
 }
 
 .problem__title {
@@ -632,8 +703,8 @@ body::before {
 
 .problem__list-checkbox {
     display: inline-block;
-    width: 24px;
-    height: 24px;
+    min-width: 24px;
+    min-height: 24px;
     margin-right: 0.6em;
     border-radius: 4px;
     position: relative; 
@@ -659,20 +730,36 @@ body::before {
         position: relative;
     }
 
+    .problem__list-item {
+        font-size: 16px;
+    }
+
     .problem__image {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        right: 10px;
+        right: 30px;
         max-width: 120px;
         object-fit: cover;
-        
     }
 }
 
 @media screen and (max-width: 768px) {
+    .problem__list-checkbox {
+        min-width: 18px;
+        min-height: 18px;
+    }
+
+    .problem__image {
+        display: none;
+    }
+
     .problem__title-big {
         font-size: 30px;
+    }
+
+    .problem__list-item {
+        font-size: 14px;
     }
 }
 
@@ -681,6 +768,21 @@ body::before {
 .solution {
     margin-top: 26px;
     padding-bottom: 80px;
+    background-image: url(images/background_yellow01.png);
+    background-repeat: no-repeat;
+    background-position: 30% -10%;
+    position: relative;
+}
+
+.solution__border {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 2000px;
+    overflow: hidden;
+    transform: translateY(-50%) translateX(-20%) rotate(-20deg);
+    z-index: -1;
+    opacity: 0.43;
 }
 
 .solution__inner {
@@ -906,16 +1008,16 @@ body::before {
     aspect-ratio: 497/440;
     mask-image: linear-gradient(to right, black 60%, transparent 100%);
     -webkit-mask-image: linear-gradient(to right, black 60%, transparent 100%);
+    z-index: -1;
 }
 
 .cv__title {
     color: #fff;
     padding-block: 123px 28px;
-    font-size: 40px;
     font-weight: 700;
     line-height: 150%;
     text-align: center;
-    background: url(images/background-yellow.png) no-repeat 30% 30%;
+    background: url(images/background_yellow01.png) no-repeat 30% 30%;
     background-size: 400px 400px;
     margin-bottom: 0;
 }
@@ -936,7 +1038,6 @@ body::before {
     font-size: 20px;
     font-weight: 700;
     line-height: 100%;
-    margin-top: 20px;
 }
 
 .cv__buttons {
@@ -968,12 +1069,12 @@ body::before {
 }
 
 .cv__button-free-container {
-    padding-block: 12px;
+    padding-block: 9px;
     padding-inline: 40px 47px;   
 }
 
 .cv__button-line-container {
-    padding-block: 26px;
+    padding-block: 23px;
     padding-inline: 75px 64px;   
 }
 
@@ -1006,7 +1107,7 @@ body::before {
     font-size: 13px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1058px) {
     .cv__title {
         padding-top: 60px;
     }
@@ -1063,16 +1164,65 @@ body::before {
 }
 
 @media (max-width: 768px) {
+    .cv {
+        background: none;
+        height: 441px;
+        position: relative;
+        padding-bottom: 32px;
+        width: 100%;
+        background-color: rgba(100, 100, 78, 0.6);
+    }
+
+    .cv__inner {
+        height: 100%;
+    }
+
+    .cv__image {
+        mask-image: none;
+        -webkit-mask-image: none;
+        object-fit: cover;
+        width: 100%;
+    }
+
+    .cv::before {
+        font-size: 80px;
+        top: 0px;
+    }
+
+    .cv__title {
+        background: none;
+        padding-bottom: 40px;
+    }
+
+    .cv__text {
+        font-size: 16px;
+    }
+
     .cv__container {
         padding-inline: 20px;
+        margin-bottom: 0;
+    }
+
+    .cv__button-free-circle {
+        width: 40px;
+        height: 40px;
+        font-size: 8px;
+        padding-top: 7px;
+        padding-top: 10px;
+    }
+
+    .cv__button-free-circle-big {
+        font-size: 10px;
     }
 
     .cv__buttons {
         flex-direction: column;
+        gap: 10px;
+        margin-top: 20px;
     }
 
     .cv__button {
-        max-width: 80%;
+        max-width: 550px;
         width: 100%;
         min-width: 300px;
     }
@@ -1084,11 +1234,28 @@ body::before {
     .cv__button-container {
         padding-inline: 20px;
     }
+
+    .cv__button-line-container {
+        padding-block: 16.5px;
+    }
 }
 
 /* 特徴 */
 .feature {
     padding-block: 80px;
+    position: relative;
+}
+
+.feature__border {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: scale(1, -1) translateY(30%) rotate(-30deg);
+    opacity: 0.43;
+    width: 2000px;
+    overflow: hidden;
+    z-index: -1;
+    
 }
 
 .feature__container {
@@ -1098,6 +1265,10 @@ body::before {
     margin-inline: auto;
     max-width: 1040px;
     padding-inline: 90px;
+    background-image: url(images/background_yellow01.png);
+    background-repeat: no-repeat;
+    background-position: 38% -1%;
+    background-size: 230px 230px;
 }
 
 .feature__container-box {
@@ -1158,19 +1329,21 @@ body::before {
     display: flex;
     align-items: stretch;
     gap: 20px;
-    flex-grow: 1;
 }
 
 
 .feature__container-text-line {
     display: block;
     width: 2px;
-    height: 100%;
     border-left: 2px solid #F7E40B;
+    background-color: #F7E40B;
+    flex: 0 1;
+    margin-left: 7px;
 }
 
 .feature__container-text-text {
     line-height: 150%;
+    flex: 1 1;
 }
 
 .feature__container-image {
@@ -1256,6 +1429,10 @@ body::before {
 
 .achievement {
     padding-block: 80px 107px;
+    background-color: #ECEAD7;
+    background-image: url(images/background_yellow01.png);
+    background-repeat: no-repeat;
+    background-position: 35% -17%;
 }
 
 .achievement__list {
@@ -1320,6 +1497,10 @@ body::before {
     border-bottom-right-radius: 20px;
 }
 
+.achievement__container-tabs {
+    display: none;
+}
+
 .achievement__container-item-content {
     width: 100%;
     max-width: 460px;
@@ -1347,7 +1528,7 @@ body::before {
     width: 100%;
 }
 
-.achievement__container-item-price-icon {
+.achievement__container-item-price-container {
     font-size: 42px;
     font-weight: 700;
     width: 58px;
@@ -1357,8 +1538,11 @@ body::before {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.achievement__container-item-price-icon {
     color: #fff;
-    line-height: 1;
+    font-size: 32px;
 }
 
 .achievement__container-item-price-text {
@@ -1394,6 +1578,18 @@ body::before {
     .achievement__container-customer-name {
         font-size: 28px;
     }
+
+    .achievement__container-item-list-item {
+        font-size: 16px;
+    }
+
+    .achievement__container-item-price {
+        padding: 16px 24px;
+    }
+
+    .achievement__container-item-price-text {
+        font-size: 16px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -1412,12 +1608,88 @@ body::before {
     .achievement__container-customer-name {
         font-size: 20px;
     }
+
+    .achievement__container-tabs {
+        display: flex;
+        justify-content: space-between;
+        /* gap: 20px; */
+        margin-bottom: 30px;
+    }
+
+    .achievement__container-tab {
+        height: 40px;
+        width: 50%;
+        border: none;
+        background-color: #F5F5F5;
+        font-size: 14px;
+        font-weight: 700;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        text-align: center;
+    }
+
+    .achievement__container-tab.active {
+        background-color: #333;
+        color: #fff;
+    }
+
+    .achievement__container-item-content,
+    .achievement__container-item-image-container {
+        display: none;
+    }
+
+    .achievement__container-item-content.active,
+    .achievement__container-item-image-container.active {
+        display: block;
+    }
+
+    .achievement__container-item {
+        flex-direction: column;
+    }
+
+    .achievement__container-item-list-item {
+        font-size: 14px;
+    }
+
+    .achievement__container-item-price {
+        padding: 16px 24px;
+    }
+
+    .achievement__container-item-price-text {
+        font-size: 14px;
+    }
+
+    .achievement__container-item-content {
+        width: 100%;
+        max-width: none;
+    }
+
+    .achievement__container-item-image {
+        width: 100%;
+        max-width: 300px;
+        min-width: auto;
+    }
 }
 
 /* フロー */
 
 .flow {
     padding-block: 80px;
+    background-image: url(images/background_yellow02.png);
+    background-repeat: no-repeat;
+    background-position: 35% -25%;
+    position: relative;
+}
+
+.flow__border {
+    position: absolute;
+    bottom: -100px;
+    left: 0;
+    transform: rotate(-30deg);
+    opacity: 0.43;
+    width: 2000px;
+    overflow: hidden;
+    z-index: -1;
 }
 
 .flow__inner {
@@ -1500,32 +1772,6 @@ body::before {
 }
 
 @media (max-width: 768px) {
-    /* .flow__item {
-        align-items: flex-start;
-    }
-
-    .flow__item-content {
-        margin-bottom: 20px;
-    }
-
-    .flow__item-step-icon {
-        height: 100%;
-    }
-
-    .flow__item:not(:last-child) .flow__item-step-icon::after {
-        min-height: 30px;
-        max-height: 50px;
-    }
-
-    .flow__item-step-icon-self {
-        width: 80px;
-        height: 80px;
-    }
-
-    .flow__item-step-icon-self i {
-        font-size: 32px;
-    } */
-
     .flow__inner {
         max-width: calc(95vw + 40px);
         margin-inline: 20px;
@@ -1548,15 +1794,18 @@ body::before {
     .flow__item-step {
         flex-direction: row;
         gap: 20px;
+        position: relative;
     }
 
-    .flow__item-step-icon {
-        display: none;
-    }
 
     .flow__item-step-icon-self {
+        width: 60px;
+        height: 60px;
+        border: none;
+    }
+
+    .flow__item-step-icon-self-image {
         width: 40px;
-        height: 40px;
     }
 
     .flow__item:not(:last-child) .flow__item-step-icon::after {
@@ -1572,6 +1821,10 @@ body::before {
 
 .faq {
     padding-block: 80px 100px;
+    background-image: url(images/background_yellow03.png);
+    background-repeat: no-repeat;
+    background-position: 0% -70%;
+    background-size: 450px 450px;
 }
 
 .faq__inner {
@@ -1634,6 +1887,27 @@ body::before {
     width: 16px;
     height: 16px;
     margin-left: auto;
+    cursor: pointer;
+    position: relative;
+}
+
+.faq__container-item-question-button-line {
+    position: absolute;
+    width: 16px;
+    height: 2px;
+    background-color: #333333;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.3s ease;
+}
+
+.faq__container-item-question-button-line:first-child {
+    transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.faq__container-item-question-button.active .faq__container-item-question-button-line:first-child {
+    transform: translate(-50%, -50%) rotate(180deg);
 }
 
 .faq__container-item-answer {
@@ -1770,7 +2044,6 @@ body::before {
 
 .contact__free-text {
     font-size: 26px;
-    margin-left: 10px;
 }
 
 .contact__container {
@@ -1936,17 +2209,8 @@ body::before {
 
 @media (max-width: 1024px) {
     .contact__bubble {
-        position: absolute;
-        padding: 15px 40px 25px;
         border: 3px solid #F7E40B;
-        background-color: #ffffff;
-        border-radius: 10px;
-        text-align: center;
-        left: 50%;
-        top: -15px;
-        transform: translateX(-50%);
-        white-space: nowrap;
-        max-width: 720px;
+        top: -30px;
     }
     
     .contact__bubble-text-container {
@@ -1955,30 +2219,17 @@ body::before {
     }
     
     .contact__bubble::before {
-        content: "";
-        position: absolute;
-        bottom: -20px;
+        bottom: -15px;
         left: 50%;
-        width: 40px;
-        height: 40px;
-        box-sizing: border-box;
-        background-color: #ffffff; /* 背景色と同じ色を指定 */
-        rotate: 135deg;
-        translate: -50%;
+        width: 30px;
+        height: 30px;
     }
     
     .contact__bubble::after {
-        content: "";
-        position: absolute;
-        bottom: -20px;
+        bottom: -15px;
         left: 50%;
-        width: 40px;
-        height: 40px;
-        box-sizing: border-box;
-        border: 3px solid;
-        border-color: #F7E40B #F7E40B transparent transparent;
-        rotate: 135deg;
-        translate: -50%;
+        width: 30px;
+        height: 30px;
     }
 
     .contact__free {
@@ -2013,6 +2264,28 @@ body::before {
 }
 
 @media (max-width: 768px) {
+    .contact__bubble {
+        padding-inline: 10px;
+        padding-block: 10px 15px;
+        top: 0px;
+    }
+
+    .contact__free {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 150%;
+        display: inline-block;
+    }
+
+    .contact__free-red {
+        font-size: 20px;
+        color: #FF382B;
+    }
+
+    .contact__free-text {
+        font-size: 14px;
+    }
+    
     .contact__title::before {
         font-size: 64px;
     }
@@ -2057,6 +2330,12 @@ body::before {
     }
 }
 
+@media (max-width: 480px) {
+    .contact__bubble {
+        padding-inline: 5px;
+    }
+}
+
 
 /* フッター */
 .footer {
@@ -2093,5 +2372,23 @@ body::before {
     color: #fff;
     font-weight: 700;
     line-height: 160%;
+}
+
+@media (max-width: 1024px) {
+    .footer__container {
+        padding-block: 40px 20px;   
+    }
+
+    .footer__container-text {
+        font-size: 12px;
+    }
+    
+    .footer__container-privacy {
+        padding-block: 20px 40px;
+    }   
+
+    .footer__container-privacy-link {
+        font-size: 12px;
+    }
 }
 
